--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                             <div class="wrapper"><span data-width="60"></span></div>
                         </li>
                         <li>
-                            <p>Python - Django, Pandas</p>
+                            <p>Python - Scipy, Pandas, Natural Language Processing</p>
                             <div class="wrapper"><span data-width="75"></span></div>
                         </li>
                         <li>
@@ -226,10 +226,6 @@
                         <li>
                             <p>C/C++ - Advanced Data Structures</p>
                             <div class="wrapper"><span data-width="50"></span></div>
-                        </li>
-                        <li>
-                            <p>Ruby - Ruby on Rails</p>
-                            <div class="wrapper"><span data-width="20"></span></div>
                         </li>
                     </ul>
                 </div>
@@ -290,11 +286,11 @@
             <div class="filters">
                 <ul class="wow lightSpeedIn">
                     <li><a href="#" data-filter="*" class="active"><i class="icon-grid"></i></a></li>
-                    <li><a href="#" data-filter=".print">Peer Chatroom</a></li>
                     <li><a href="#" data-filter=".icon">PEACH</a></li>
                     <li><a href="#" data-filter=".photography">DeeCaf</a></li>
                     <li><a href="#" data-filter=".web-design">Actor Graphs</a></li>
                     <li><a href="#" data-filter=".ui">Autocomplete</a></li>
+                    <li><a href="#" data-filter=".print">A2F Website</a></li>
                 </ul>
             </div> <!-- *** end filters *** -->
         </div> <!-- *** end container *** -->
@@ -307,7 +303,7 @@
             ============================== -->
             <div class="portfolio-item photography">
                <div class="portfolio">
-                  <a href="http://pea-c-h.herokuapp.com/" data-lightbox-gallery="portfolio">
+                  <a href="https://pea-ch.herokuapp.com/" data-lightbox-gallery="portfolio">
                     <img src="img/projects/peach1.jpg" alt="Portfolio 2"/><!-- END PORTFOLIO IMAGE -->
                     <div class="portfolio-overlay hvr-rectangle-out">
                         <h2 class="margin-bottom-small">
@@ -324,7 +320,7 @@
             ============================== -->
             <div class="portfolio-item photography">
                <div class="portfolio">
-                  <a href="http://deecaf.heroku.com/" data-lightbox-gallery="portfolio">
+                  <a href="https://deecaf.herokuapp.com/" data-lightbox-gallery="portfolio">
                     <img src="img/projects/deecaf1.jpg" alt="Portfolio 1"/><!-- END PORTFOLIO IMAGE -->
                     <div class="portfolio-overlay hvr-rectangle-out">
                         <h2 class="margin-bottom-small">
@@ -335,24 +331,6 @@
                   </a>
                </div>
             </div> <!-- *** end  portfolio-item *** -->
-            
-            <!-- =========================
-               Portfolio item
-            ============================== -->
-            <div class="portfolio-item photography">
-               <div class="portfolio">
-                  <a href="http://unc.acts2fellowship.org/" data-lightbox-gallery="portfolio">
-                    <img src="img/projects/a2f2" alt="Portfolio 1"/><!-- END PORTFOLIO IMAGE -->
-                    <div class="portfolio-overlay hvr-rectangle-out">
-                        <h2 class="margin-bottom-small">
-                            <strong class="white-color bold-text">A2F Website</strong>
-                        </h2>
-                        <div class="button">View Project</div>
-                    </div><!-- END PORTFOLIO OVERLAY -->
-                  </a>
-               </div>
-            </div> <!-- *** end  portfolio-item *** -->
-
 
             <!-- =========================
                Portfolio item
@@ -420,16 +398,12 @@
             ============================== -->
             <div class="portfolio-item web-design">
                <div class="portfolio">
-                  <a data-lightbox-gallery="portfolio">
-                    <img src="img/projects/tetris1.jpg" alt="Portfolio 1"/><!-- END PORTFOLIO IMAGE -->
+                  <a href="https://unc.acts2fellowship.org/"data-lightbox-gallery="portfolio">
+                    <img src="img/projects/a2f2" alt="Portfolio 1"/><!-- END PORTFOLIO IMAGE -->
                     <div class="portfolio-overlay hvr-rectangle-out">
                         <h2 class="margin-bottom-small">
-                            <strong class="white-color bold-text">Tetris</strong>
+                            <strong class="white-color bold-text">A2F Website</strong>
                         </h2>
-                        <p style="color: black;">
-                          I was able to make my own Tetris video game using the Java GUI and multi-threading.
-                          It performs basic game operations, but also has a high score system and a menu.
-                        </p>
                     </div><!-- END PORTFOLIO OVERLAY -->
                   </a>
                </div>
