--- a/index.html
+++ b/index.html
@@ -44,26 +44,6 @@
     <!-- Header scripts -->
     <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     <script src="js/queryloader2.min.js"></script>
-
-    <!-- =========================
-       Preloader
-    ============================== -->
-    <script>
-        window.addEventListener('DOMContentLoaded', function() {
-            "use strict";
-            new QueryLoader2(document.querySelector("body"), {
-                barColor: "#3498db",
-                backgroundColor: "#111",
-                percentage: true,
-                barHeight: 1,
-                minimumTime: 200,
-                fadeOutTime: 1000
-            });
-        });
-        var alert_color_success_background = '#3498db';
-        var alert_color_error_background = '#CF000F';
-
-    </script>
 </head>
 <body>
     <!--[if lt IE 8]>
@@ -131,7 +111,7 @@
                     <div class="carousel-caption">
                         <h1 class="light mab-none">Hello, My name is <strong class="bold-text">Paulo</strong>!</h1>
                         <h1 class="light margin-bottom-medium mat-none"><strong class="bold-text">Welcome</strong> to my website!</h1>
-                        <p class="light margin-bottom-medium">New Graduate, Prospective Web Developer</p>
+                        <p class="light margin-bottom-medium">Software Developer</p>
                         <div class="call-button">
                             <div class="row">
                                 <div class="col-md-4 col-md-offset-2 col-sm-4 col-sm-offset-2 col-xs-12">
@@ -165,21 +145,23 @@
                 <div class="row margin-bottom-medium">
                     <div class="col-md-7">
                         <div class="jumbo-text light-text margin-top-medium wow slideInLeft" data-wow-duration="2s">
-                            <strong class="bold-text">Software Developer</strong> and Data Scientist
+                            <strong class="bold-text">Software Developer</strong> currently working for <i>UNC Lineberger Comprehensive Cancer Center</i>
                         </div>
                     </div>
                     <div class="col-md-5">
-                        <img src="img/me3.jpg" style="height: 65%; width: 65%" alt="About Us Big Image" class="center-block img-responsive">
+                        <img src="img/me1.png" style="height: 65%; width: 65%" alt="About Us Big Image" class="center-block img-responsive">
                     </div>
                     <div class="clearfix"></div>
                 </div>
-                <p class="margin-bottom-medium wow slideInUp">I'm a new graduate from UC San Diego and I was an Electrical Engineering major for my first two years as a student.
-                  I made the switch to Cognitive Science and Computer Science at the end of my sophomore year, and now I'm specializing in Front-End Development
-                  while also learning Full Stack practices and the growing field of Data Science. This last year I took classes on database system principles, server side development, and also recommender systems. 
-                  I'm most proficient in JavaScript and ES6, but I'm quickly taking a liking to Python after using it in my recommender systems course. I'm also proficient in C++ and Java through taking 
-                  data structure classes. I also have experience with WordPress as I've helped build my organization's website and a small blog.
+                <p class="margin-bottom-medium wow slideInUp">I currently work as a remote full stack web developer with a contract that ends soon. 
+                    I'm tasked with developing a JavaScript stack web application that emulates Lineberger's "Laboratory Information Management System"
+                    or LIMS. LIMS was written in Java and connects to an Oracle DB, and so my backend tasks include writing server-side script in Node.js 
+                    to interact with that same Oracle DB. In the front end, I use JQuery extensively with Object-Oriented JavaScript practices. In the 
+                    testing side, I use Mocha and Chai to write unit tests.
                 </p>
-                <p class="margin-bottom-medium wow slideInUp">I'm originally from the Philippines, moving to the Big Island of Hawaii a week before I turned 10.
+                <p class="margin-bottom-medium wow slideInUp">I graduated last June from UC San Diego and I was an Electrical Engineering major for my first two years as a student.
+                        I made the switch to Cognitive Science and Computer Science at the end of my sophomore year. Besides web development, I do Machine Learning & Data Science 
+                        programming in Kaggle. I'm originally from the Philippines, moving to the Big Island of Hawaii a week before I turned 10.
                   I lived there for 5 years, moving to New Jersey for half a year, and finally settling in Ventura County here in California. Some of my hobbies include
                   reading, cooking, and sports. I like to read various genres and among my favorite author is J.R.R Tolkien (huge LOTR fan!). I like studying History, especially
                   Military history, but I also like anything military related (tanks, planes, and warships!). I love soccer and I'm an avid fan of Liverpool FC.
@@ -208,11 +190,11 @@
                             <div class="wrapper"><span data-width="75"></span></div>
                         </li>
                         <li>
-                            <p>Javascript - ES2015, React/Redux, AngularJS 1&2, Node.js, Express.js, jQuery, D3</p>
+                            <p>Javascript - JQuery, Node.js, AJAX, ES6, React, D3</p>
                             <div class="wrapper"><span data-width="90"></span></div>
                         </li>
                         <li>
-                            <p>Databases - SQLite3, PostgreSQL, MongoDB</p>
+                            <p>Databases - Oracle, SQLite3, PostgreSQL, MongoDB</p>
                             <div class="wrapper"><span data-width="60"></span></div>
                         </li>
                         <li>
@@ -240,19 +222,15 @@
                         <div class="icon"><i class="icon-idea"></i></div>
                         <h4><strong>Git</strong></h4>
                         <div class="icon"><i class="icon-idea"></i></div>
-                        <h4><strong>Vim</strong></h4>
+                        <h4><strong>Mocha</strong></h4>
                         <div class="icon"><i class="icon-idea"></i></div>
-                        <h4><strong>Atom</strong></h4>
+                        <h4><strong>Chai</strong></h4>
                         <div class="icon"><i class="icon-idea"></i></div>
                         <h4><strong>Google Chrome DevTools</strong></h4>
                         <div class="icon"><i class="icon-idea"></i></div>
-                        <h4><strong>Balsamiq Mockups (Lo-Fidelity Prototyping)</strong></h4>
+                        <h4><strong>Test Driven Development</strong></h4>
                         <div class="icon"><i class="icon-idea"></i></div>
-                        <h4><strong>Invision (Hi-Fidelity Prototyping)</strong></h4>
-                        <div class="icon"><i class="icon-idea"></i></div>
-                        <h4><strong>Adobe Premiere Pro</strong></h4>
-                        <div class="icon"><i class="icon-idea"></i></div>
-                        <h4><strong>Adobe Photoshop</strong></h4>
+                        <h4><strong>Bash</strong></h4>
                     </div>
                 </div>
 
@@ -276,7 +254,7 @@
                 <div class="col-md-10 col-md-offset-1">
                     <div class="subtitle">These consist of Web Applications and stand-alone Programs</div>
                     <p>
-                      To prevent violations of UCSD's academic integrity policies, I will not link any of the Java or C++
+                      PEACH and DeeCaf are hosted in Heroku's free tier, so please bear with the initial load time, thanks! To prevent violations of UCSD's academic integrity policies, I will not link any of the Java or C++
                       projects, which were assignments for classes. I will try to have them run in this site someday. Check out my Github @ Github.com/paulog11
                     </p>
                 </div>
@@ -285,12 +263,13 @@
             <!-- *****  Portfolio Filters ***** -->
             <div class="filters">
                 <ul class="wow lightSpeedIn">
-                    <li><a href="#" data-filter="*" class="active"><i class="icon-grid"></i></a></li>
-                    <li><a href="#" data-filter=".icon">PEACH</a></li>
-                    <li><a href="#" data-filter=".photography">DeeCaf</a></li>
-                    <li><a href="#" data-filter=".web-design">Actor Graphs</a></li>
-                    <li><a href="#" data-filter=".ui">Autocomplete</a></li>
-                    <li><a href="#" data-filter=".print">A2F Website</a></li>
+                    <li><form method="GET" action="files/Yelp_Compliment_Predictor.pdf"><button type="submit" data-filter="*" class="active">Yelp Compliment Predictor</button></form></li>
+                    <p>PDF file of our write up!</p>
+                    <li><a data-filter=".icon">PEACH</a></li>
+                    <li><a data-filter=".photography">DeeCaf</a></li>
+                    <li><a data-filter=".web-design">Actor Graphs</a></li>
+                    <li><a data-filter=".ui">Autocomplete</a></li>
+                    <li><a data-filter=".print">A2F Website</a></li>
                 </ul>
             </div> <!-- *** end filters *** -->
         </div> <!-- *** end container *** -->
@@ -393,56 +372,10 @@
                </div>
             </div> <!-- *** end  portfolio-item *** -->
 
-            <!-- =========================
-               Portfolio item
-            ============================== -->
-            <div class="portfolio-item web-design">
-               <div class="portfolio">
-                  <a href="https://unc.acts2fellowship.org/"data-lightbox-gallery="portfolio">
-                    <img src="img/projects/a2f2" alt="Portfolio 1"/><!-- END PORTFOLIO IMAGE -->
-                    <div class="portfolio-overlay hvr-rectangle-out">
-                        <h2 class="margin-bottom-small">
-                            <strong class="white-color bold-text">A2F Website</strong>
-                        </h2>
-                    </div><!-- END PORTFOLIO OVERLAY -->
-                  </a>
-               </div>
-            </div> <!-- *** end  portfolio-item *** -->
-
         </div> <!-- *** end  portfolio-wrapper *** -->
         <!-- a href="" after more projects can be added! -->
         <!-- <class="button light margin-top-medium margin-bottom-medium hvr-grow"><i class="icon-reload"></i> Load More</a> -->
     </section> <!-- *** end Portfolio *** -->
-
-    <!-- =========================
-       Skills and Projects Expanded
-    ============================== -->
-
-    <!-- <section id="why-choose-us" class="why-choose-us">
-        <div class="container margin-top-large">
-            <h2>
-                Skills and Projects
-                <span class="light-text main-color">Expanded</span>
-            </h2>
-            <div class="line main-bg margin-bottom-large"></div>
-
-            <div class="row text-center"> -->
-
-                <!-- *****  Service Single ***** -->
-                <!-- <div class="col-md-4">
-                    <div class="slideInLeft">
-                        <div class="icon"><i class="fa fa-code"></i></div>
-                        <h4><strong>JavaScript</strong></h4>
-                        <p>I've been learning all things JS since my first web application (DeeCaf).
-                          Through resources like <a href="https://www.codeschool.com/">codeschool</a> and <a href="https://www.udemy.com/courses/">Udemy</a>,
-                          I've gotten a good grasp of vanilla JS topics(hoisting, prototypes, function expressions/declarations), ES2015, and TypeScript. </p>
-                    </div>
-                </div> -->
-
-                <!-- <div class="clearfix"></div> -->
-            <!-- </div>  -->
-        <!-- </div> -->
-    <!-- </section>  -->
 
     <!-- =========================
        Contact
@@ -454,7 +387,7 @@
         <h4>Links: </h4>
         <p>Github: <a href="https://www.github.com/paulog11">github.com/paulog11</a></p>
         <p>LinkedIn: <a href="https://www.linkedin.com/in/paulo-gonzales">linkedin.com/in/paulo-gonzales</a></p>
-        <p>Codepen: <a href="http://codepen.io/paulog/">codepen.io/paulog</a></p>
+        <p>Kaggle: <a href="https://www.kaggle.com/paulog11">kaggle.com/paulog11</a></p>
         <p> Email Me at <span class="bold-text">gonzales.paulo19@gmail.com</span> </p>
         <p>
           Or Call <span class="bold-text">(805)766-9613</span>
