--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Current Employer:</strong> Ignidus Technology Inc</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Current Employer:</strong> Moody Bible Institute</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> gonzales.paulo19@gmail.com</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> 805 766 9613</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>City:</strong> City : San Diego, CA</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>City:</strong> City : Chicago, IL</li>
                 </ul>
               </div>
               <div class="col-lg-6">
@@ -104,7 +104,7 @@
             </div>
             <p>
               I am an avid photographer, videographer and fisherman. I enjoy street photography, nature landscapes and event photography. I get to take lots of photos
-              and create videos for my church. I also highly enjoy fishing and I am lucky to live in San Diego where it is available all year long! Soccer, basketball 
+              and create videos for my church. I also highly enjoy fishing and I am lucky to live in Chicago where there are lots of salmon and bass! Soccer, basketball 
               and tennis are also sports I enjoy, and I am a big fan of Liverpool FC.
             </p>
           </div>
@@ -152,7 +152,7 @@
           <div class="col-lg-6">
 
             <div class="progress">
-              <span class="skill">PHP <i class="val">70%</i></span>
+              <span class="skill">C#/.NET <i class="val">50%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -166,7 +166,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Python <i class="val">30%</i></span>
+              <span class="skill">PHP <i class="val">70%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -199,12 +199,24 @@
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
+              <h4>Software Developer</h4>
+              <h5>2021 - Present</h5>
+              <p><em>Moody Bible Institute, Chicago, IL</em></p>
+              <ul>
+                <li>At Moody Bible Institute, I work for the Enterprise Applications team that supports our three branches: Education, Radio and Publishing.</li>
+                <li>We work as a small team that includes business analysts, system analysts and developers. Tasks that I have worked on include donation event support, feature implementations, and legacy application maintenance.</li>
+                <li>A major project that I have worked on is implementing Stripe payment features with our existing payment flow. In particular, I have added API endpoints in the front (Vue) and back (.NET) ends, and their respective UI.</li>
+                <li>Another major project I have done is overhauling our identity management system that the whole institute uses from Angular to Vue. </li>
+                <li>Our stack includes microservices in C#/.NET, SQL Server, and a front end that uses Vue and Angular.</li>
+              </ul>
+            </div>
+            <div class="resume-item">
               <h4>Software Engineer</h4>
-              <h5>2018 - Present</h5>
+              <h5>2018 - 2021</h5>
               <p><em>Ignidus Technology Inc, San Diego, CA</em></p>
               <ul>
-                <li>At Ignidus, our primary product is an insurance platform for agents and underwriters to perform their duties.</li>
-                <li>We work under the Agile methodology with 2 week sprints. Tasks that I have worked on include bug fixes, SQL reports, end to end features, and platform updates.</li>
+                <li>At Ignidus, I worked on an insurance platform for agents and underwriters to perform their duties.</li>
+                <li>We worked under the Agile methodology with 2 week sprints. Tasks that I have worked on include bug fixes, SQL reports, end to end features, and platform updates.</li>
                 <li>A major project that I have worked on is a set of backend APIs for mobile applications. We utilized Google Firebase and Wallet Passes. APIs include logging in with 2 factor authentication and data display.</li>
                 <li>Another major project I've done is a Queueing system for backend services. We employed PHP-Redis to distribute heavy platform processes through multiple AWS servers.</li>
                 <li>Our stack includes PHP, MySQL, JavaScript, JQuery, and AWS. </li>
